--- a/turismo.html
+++ b/turismo.html
@@ -15,14 +15,14 @@
     
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/turismo.html">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="css/styles.css?v=2025111503">
+    <link rel="stylesheet" href="css/styles.css?v=2025111504">
     <!-- Google Fonts: Inter para texto, Playfair Display para títulos -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <!-- Leaflet CSS para mapas interactivos -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <!-- Swiper for galleries/timeline -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <!-- Font Awesome con carga optimizada -->
+    <!-- Font Awesome 6 -->
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"></noscript>
     <meta name="description" content="Guía turística de Fuerteventura 2025: descubre parques naturales, pueblos con encanto, museos, miradores y los mejores lugares que visitar en la isla.">
@@ -118,7 +118,7 @@
                     <p>Visita la antigua capital de Fuerteventura, un pueblo histórico con arquitectura colonial y museos fascinantes. Recorre sus calles empedradas, entra a la iglesia de Santa María y toma un café con vistas al barranco.</p>
                     <div class="features">
                         <span><i class="fas fa-landmark"></i> Historia</span>
-                        <span><i class="fas fa-university"></i> Museo</span>
+                        <span><i class="fas fa-building-columns"></i> Museo</span>
                         <span><i class="fas fa-binoculars"></i> Mirador</span>
                     </div>
                     <a href="#" class="btn">Más información</a>
@@ -133,7 +133,7 @@
                     <div class="features">
                         <span><i class="fas fa-sun"></i> Atardecer</span>
                         <span><i class="fas fa-compass"></i> Faro</span>
-                        <span><i class="fas fa-walking"></i> Paseo marítimo</span>
+                        <span><i class="fas fa-person-walking"></i> Paseo marítimo</span>
                     </div>
                     <a href="#" class="btn">Más información</a>
                 </div>
@@ -145,9 +145,9 @@
                     <h3>Isla de Lobos</h3>
                     <p>Descubre este paraíso natural a solo 15 minutos en barco desde Corralejo, perfecto para senderismo y snorkel. Reserva con tiempo el permiso de visita y sigue el sendero hasta el Puertito para un baño inolvidable.</p>
                     <div class="features">
-                        <span><i class="fas fa-hiking"></i> Senderismo</span>
+                        <span><i class="fas fa-person-hiking"></i> Senderismo</span>
                         <span><i class="fas fa-water"></i> Snorkel</span>
-                        <span><i class="fas fa-ticket-alt"></i> Reserva</span>
+                        <span><i class="fas fa-ticket-simple"></i> Reserva</span>
                     </div>
                     <a href="#" class="btn">Más información</a>
                 </div></article>
@@ -183,9 +183,9 @@
                     <h3>Cuevas de Ajuy</h3>
                     <p>Formaciones geológicas milenarias en la costa oeste, con cuevas excavadas por el mar y acantilados de roca volcánica. Pasea por el sendero costero y contempla la fuerza del océano.</p>
                     <div class="features">
-                        <span><i class="fas fa-rock"></i> Geología</span>
+                        <span><i class="fas fa-mountain"></i> Geología</span>
                         <span><i class="fas fa-water"></i> Cuevas marinas</span>
-                        <span><i class="fas fa-walking"></i> Sendero</span>
+                        <span><i class="fas fa-person-walking"></i> Sendero</span>
                     </div>
                     <a href="#" class="btn">Más información</a>
                 </div>
@@ -234,7 +234,7 @@
                     <h3>Puerto del Rosario</h3>
                     <p>Capital de la isla con murales artísticos urbanos, museos de arte y la Casa Museo Unamuno.</p>
                     <div class="features">
-                        <span><i class="fas fa-paint-brush"></i> Arte urbano</span>
+                        <span><i class="fas fa-paintbrush"></i> Arte urbano</span>
                     </div>
                     <a href="#" class="btn">Más información</a>
                 </div>
@@ -375,7 +375,7 @@
                 <p>Practica deportes acuáticos en las mejores playas para el viento.</p>
             </div>
             <div class="activity-card">
-                <i class="fas fa-hiking"></i>
+                <i class="fas fa-person-hiking"></i>
                 <h3>Senderismo</h3>
                 <p>Explora rutas y senderos con vistas espectaculares.</p>
             </div>
