--- a/playas.html
+++ b/playas.html
@@ -19,7 +19,7 @@
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/playas.html">
     <link rel="manifest" href="manifest.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css?v=2025111503">
+    <link rel="stylesheet" href="css/styles.css?v=2025111504">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"></noscript>
@@ -110,7 +110,7 @@
                     <div class="beach-info">
                         <h3>Grandes Playas de Corralejo</h3>
                         <div class="beach-location">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="fas fa-location-dot"></i>
                             <span>Corralejo, Norte de Fuerteventura</span>
                         </div>
                         <p>Extensión de más de 10km de arena blanca y fina junto al Parque Natural de las Dunas. Aguas turquesas poco profundas, perfectas para familias. Zona norte con viento ideal para windsurf y kitesurf.</p>
@@ -121,7 +121,7 @@
                             <span><i class="fas fa-utensils"></i> Chiringuitos</span>
                         </div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Grandes%20Playas%20de%20Corralejo%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
-                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                            <i class="fas fa-map-location-dot"></i> Ver en Google Maps
                         </a>
                     </div>
                 </article>
@@ -131,18 +131,18 @@
                     <div class="beach-info">
                         <h3>Playa de Cofete</h3>
                         <div class="beach-location">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="fas fa-location-dot"></i>
                             <span>Península de Jandía, Pájara</span>
                         </div>
                         <p>12km de playa virgen considerada una de las más bellas de España. Paisaje salvaje con montañas de fondo y el misterioso Villa Winter. Acceso por pista de tierra (4x4 recomendado). Oleaje fuerte, precaución al bañarse.</p>
                         <div class="beach-features">
-                            <span><i class="fas fa-hiking"></i> Playa virgen</span>
+                            <span><i class="fas fa-person-hiking"></i> Playa virgen</span>
                             <span><i class="fas fa-camera"></i> Paisajes únicos</span>
-                            <span><i class="fas fa-exclamation-triangle"></i> Corrientes fuertes</span>
+                            <span><i class="fas fa-triangle-exclamation"></i> Corrientes fuertes</span>
                             <span><i class="fas fa-car"></i> 4x4 recomendado</span>
                         </div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Playa%20de%20Cofete%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
-                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                            <i class="fas fa-map-location-dot"></i> Ver en Google Maps
                         </a>
                     </div>
                 </article>
@@ -152,7 +152,7 @@
                     <div class="beach-info">
                         <h3>Lagos de El Cotillo</h3>
                         <div class="beach-location">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="fas fa-location-dot"></i>
                             <span>El Cotillo, La Oliva</span>
                         </div>
                         <p>Serie de calas protegidas con piscinas naturales de aguas cristalinas. Ideal para familias con niños pequeños. El Aljibe de la Cueva es perfecto para snorkel. Al sur, playa Los Lagos con olas para surf.</p>
@@ -163,7 +163,7 @@
                             <span><i class="fas fa-parking"></i> Parking cercano</span>
                         </div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Lagos%20de%20El%20Cotillo%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
-                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                            <i class="fas fa-map-location-dot"></i> Ver en Google Maps
                         </a>
                     </div>
                 </article>
@@ -173,7 +173,7 @@
                     <div class="beach-info">
                         <h3>Playa de Sotavento</h3>
                         <div class="beach-location">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="fas fa-location-dot"></i>
                             <span>Costa Calma - Jandía, Pájara</span>
                         </div>
                         <p>9km de playa paradisíaca con laguna que se forma con la marea baja. Sede del Campeonato Mundial de Windsurf y Kitesurf. Vientos alisios constantes y escuelas de deportes acuáticos. Zona de aguas tranquilas y zona de olas.</p>
@@ -184,7 +184,7 @@
                             <span><i class="fas fa-umbrella-beach"></i> Servicios completos</span>
                         </div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Playa%20de%20Sotavento%20Costa%20Calma%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
-                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                            <i class="fas fa-map-location-dot"></i> Ver en Google Maps
                         </a>
                     </div>
                 </article>
@@ -194,7 +194,7 @@
                     <div class="beach-info">
                         <h3>Playa de Ajuy (Playa Negra)</h3>
                         <div class="beach-location">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="fas fa-location-dot"></i>
                             <span>Ajuy, Pájara</span>
                         </div>
                         <p>Pequeña playa de arena negra volcánica con encanto especial. Famosa por sus cuevas marinas visitables a pie. Pueblo pesquero auténtico con excelentes restaurantes de pescado fresco. Oleaje moderado.</p>
@@ -205,7 +205,7 @@
                             <span><i class="fas fa-utensils"></i> Restaurantes</span>
                         </div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Playa%20de%20Ajuy%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
-                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                            <i class="fas fa-map-location-dot"></i> Ver en Google Maps
                         </a>
                     </div>
                 </article>
@@ -215,7 +215,7 @@
                     <div class="beach-info">
                         <h3>Playa de Morro Jable</h3>
                         <div class="beach-location">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="fas fa-location-dot"></i>
                             <span>Morro Jable, Pájara</span>
                         </div>
                         <p>Playa urbana de 4km con paseo marítimo, ideal para familias. Aguas tranquilas y servicios completos. Ambiente turístico con hoteles, restaurantes y tiendas. Puerto con excursiones en barco a playas cercanas.</p>
@@ -226,7 +226,7 @@
                             <span><i class="fas fa-ship"></i> Excursiones</span>
                         </div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Playa%20de%20Morro%20Jable%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
-                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                            <i class="fas fa-map-location-dot"></i> Ver en Google Maps
                         </a>
                     </div>
                 </article>
@@ -236,7 +236,7 @@
                     <div class="beach-info">
                         <h3>Playa de La Concha</h3>
                         <div class="beach-location">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="fas fa-location-dot"></i>
                             <span>El Cotillo, La Oliva</span>
                         </div>
                         <p>Playa protegida en forma de concha con aguas muy tranquilas. Perfecta para niños y personas mayores. Arena blanca y fina. Suele estar concurrida en temporada alta por su belleza y tranquilidad.</p>
@@ -247,7 +247,7 @@
                             <span><i class="fas fa-heart"></i> Muy popular</span>
                         </div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Playa%20de%20La%20Concha%20El%20Cotillo%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
-                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                            <i class="fas fa-map-location-dot"></i> Ver en Google Maps
                         </a>
                     </div>
                 </article>
@@ -257,18 +257,18 @@
                     <div class="beach-info">
                         <h3>Playa de Esquinzo (Butihondo)</h3>
                         <div class="beach-location">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="fas fa-location-dot"></i>
                             <span>Esquinzo, Pájara</span>
                         </div>
                         <p>Playa tranquila entre acantilados con arena dorada. Menos masificada que otras playas del sur. Ideal para quienes buscan tranquilidad. Buen acceso y aparcamiento gratuito. Pequeños chiringuitos en temporada alta.</p>
                         <div class="beach-features">
-                            <span><i class="fas fa-people-carry"></i> Tranquila</span>
+                            <span><i class="fas fa-users"></i> Tranquila</span>
                             <span><i class="fas fa-mountain"></i> Entre acantilados</span>
                             <span><i class="fas fa-parking"></i> Parking gratuito</span>
                             <span><i class="fas fa-umbrella-beach"></i> Servicios básicos</span>
                         </div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Playa%20de%20Esquinzo%20Butihondo%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
-                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                            <i class="fas fa-map-location-dot"></i> Ver en Google Maps
                         </a>
                     </div>
                 </article>
@@ -278,18 +278,18 @@
                     <div class="beach-info">
                         <h3>Playa del Matorral</h3>
                         <div class="beach-location">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="fas fa-location-dot"></i>
                             <span>Morro Jable, Pájara</span>
                         </div>
                         <p>Continuación natural de la playa de Morro Jable, menos urbanizada. Paseo litoral de 2km hasta el faro. Popular entre runners y caminantes. Observación de aves marinas. Arena clara y aguas limpias.</p>
                         <div class="beach-features">
-                            <span><i class="fas fa-running"></i> Paseos</span>
+                            <span><i class="fas fa-person-running"></i> Paseos</span>
                             <span><i class="fas fa-crow"></i> Aves marinas</span>
-                            <span><i class="fas fa-lighthouse"></i> Faro cercano</span>
+                            <span><i class="fas fa-lightbulb"></i> Faro cercano</span>
                             <span><i class="fas fa-umbrella-beach"></i> Menos concurrida</span>
                         </div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Playa%20del%20Matorral%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
-                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                            <i class="fas fa-map-location-dot"></i> Ver en Google Maps
                         </a>
                     </div>
                 </article>
@@ -375,7 +375,7 @@
                 <p>Ten en cuenta la dirección del viento y las corrientes.</p>
             </div>
             <div class="tip">
-                <i class="fas fa-trash-alt"></i>
+                <i class="fas fa-trash-can"></i>
                 <h3>Limpieza</h3>
                 <p>Mantén la playa limpia y llévate tu basura.</p>
             </div>
