Perf/Access: unify DOMContentLoaded handlers, improved lazy loading, mark active nav links with aria-current, add intrinsic dimensions + decoding async to logo images across pages.

--- a/politica-cookies.html
+++ b/politica-cookies.html
@@ -20,7 +20,7 @@
     
     <header>
         <div class="logo-container">
-            <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy">
+            <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy" decoding="async" width="70" height="70">
             <h1>This is Fuerteventura</h1>
         </div>
         <nav id="site-nav" aria-label="Navegación principal">
@@ -166,7 +166,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy">
+                <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy" decoding="async" width="40" height="40">
                 <p>&copy; 2025 This is Fuerteventura. Todos los derechos reservados.</p>
             </div>
             <div class="footer-section">
