--- a/turismo.html
+++ b/turismo.html
@@ -62,7 +62,7 @@
     <a class="skip-link" href="#main">Saltar al contenido principal</a>
     <header>
         <div class="logo-container">
-            <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy">
+            <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy" decoding="async" width="70" height="70">
             <h1>This is Fuerteventura</h1>
         </div>
         <nav id="site-nav" aria-label="Navegación principal">
@@ -433,7 +433,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
-                <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy">
+                <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy" decoding="async" width="40" height="40">
                 <h3>This is Fuerteventura</h3>
             </div>
             <div class="footer-links">
