--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/">
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/styles.css?v=2025111507">
+    <link rel="preload" href="images/Fuerteventura.jpeg" as="image" fetchpriority="high">
     <!-- Google Fonts: Inter para texto, Playfair Display para títulos -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <!-- Leaflet CSS para mapa interactivo -->
@@ -46,6 +47,7 @@
     <meta name="twitter:title" content="This is Fuerteventura - Guía Turística Completa 2025">
     <meta name="twitter:description" content="Descubre Fuerteventura: mejores playas, hoteles, restaurantes y actividades turísticas.">
     <meta name="twitter:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app http://localhost:3000 http://localhost:3001;">
     <meta name="twitter:site" content="@thisisfuerteventura">
     
     <!-- Structured Data: Website -->
