--- a/noticia.html
+++ b/noticia.html
@@ -18,6 +18,8 @@
 	<link rel="manifest" href="manifest.webmanifest">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
 	    <link rel="stylesheet" href="css/styles.css?v=2025111507">
+	    <link rel="preload" href="images/Fuerteventura.jpeg" as="image" fetchpriority="high">
+	
 	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"></noscript>
 	
@@ -28,6 +30,8 @@
 	
 	<!-- Twitter Cards - Serán actualizados dinámicamente por JS -->
 	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app http://localhost:3000 http://localhost:3001;">
 </head>
 <body class="article-page">
 	<a class="skip-link" href="#main">Saltar al contenido principal</a>
