--- a/turismo.html
+++ b/turismo.html
@@ -16,6 +16,7 @@
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/turismo.html">
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/styles.css?v=2025111507">
+    <link rel="preload" href="images/Fuerteventura.jpeg" as="image" fetchpriority="high">
     <!-- Google Fonts: Inter para texto, Playfair Display para títulos -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <!-- Leaflet CSS para mapas interactivos -->
@@ -41,6 +42,7 @@
     <meta name="twitter:title" content="Turismo en Fuerteventura - Guía Completa">
     <meta name="twitter:description" content="Los mejores lugares turísticos de Fuerteventura: parques, pueblos y atracciones.">
     <meta name="twitter:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app http://localhost:3000 http://localhost:3001;">
     
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -83,8 +85,8 @@
 
     <main id="main">
     <section class="hero tourism-hero parallax reveal hero-video">
-        <video autoplay muted loop playsinline class="hero-bg" poster="images/Fuerteventura.jpeg">
-            <source src="images/VideoHeader.mp4" type="video/mp4">
+        <video autoplay muted loop playsinline preload="metadata" class="hero-bg" poster="images/Fuerteventura.jpeg">
+            <source src="images/VideoHeader.mp4" type="video/mp4" fetchpriority="high">
             Tu navegador no soporta vídeo.
         </video>
         <div class="hero-overlay"></div>
